# cgdkg_artifact

./: .gitignore  CLAUDE.md  Cargo.toml
benches/: benchmarks_pvss.rs
classgroup/: Cargo.toml
classgroup/src/: bls12381_serde.rs  cg_encryption.rs  hash_to_point.rs  key_pop_zk.rs  lib.rs  nidkg_dealing.rs  nidkg_zk_share.rs  polynomial.rs  public_coefficients.rs  pvss.rs  random_oracle.rs  rng.rs  scalar_bls12381.rs  seed.rs  utils.rs
supra-bicycl/: build_script_data.json
supra-bicycl/c_lib/: CMakeLists.txt
